--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WebApplication1/obj/Debug/WebApplication1.csprojAssemblyReference.cache
 WebApplication1/bin
 WebApplication1/obj/Debug
 .vscode/iisexpress.json
+.vs/WebApplication1
