--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -213,10 +213,10 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Shared\_AddClient.cshtml" />
     <Content Include="Views\Home\Clients.cshtml" />
+    <Content Include="Views\Home\UpdateClient.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
